Add basic color styles and tab styles.

--- a/index.html
+++ b/index.html
@@ -102,9 +102,37 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                  
+                  <h2>Download Grayscale</h2>
+                  
+                  <ul class="nav nav-tabs" role="tablist">
+                    <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
+                    <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
+                    <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
+                    <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+                  </ul>
+
+                  <!-- Tab panes -->
+                  <div class="tab-content">
+                    <div role="tabpanel" class="tab-pane fade in active" id="home">
+                      <p>Here is some content in tab 1.</p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="profile">
+                      <p>Here is some content in tab 2.</p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="messages">
+                      <p>Here is some content in tab 3.</p>
+                    </div>
+                    <div role="tabpanel" class="tab-pane fade" id="settings">
+                      <p>Here is some content in tab 4.</p>
+                    </div>
+                  </div>
+
+
+
+
+                  <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
+                  <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
                 </div>
             </div>
         </div>
