Add base fancybox support with breakpoint-aware logic.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                 <div class="tab-content">
                   <div role="tabpanel" class="tab-pane fade in active" id="home">
                     <p>Here is some content in tab 1.</p>
+                    <p><a class="fancybox" data-fancybox-type="iframe" rel="group" href="http://www.crl.edu/about">Fancybox test</a></p>
                   </div>
                   <div role="tabpanel" class="tab-pane fade" id="profile">
                     <p>Here is some content in tab 2.</p>
@@ -186,6 +187,8 @@
             </div>
         </div>
     </section>
+    
+    <div id="desktopTest" class="hidden-xs hidden-sm"></div>
 
     <!-- Map Section -->
     <div id="map"></div>
@@ -209,8 +212,13 @@
     <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
+    <!-- Add fancyBox -->
+    <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
+    <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+    
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
+
 
 </body>
 
