--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="container content-section text-center container-dark">
+    <section id="about" class="container content-section text-center section-dark">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>About Grayscale</h2>
