More intro page work and space cleanup on less.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <a href="#images" class="btn btn-circle page-scroll">
                 <i class="fa fa-camera animated"></i>
               </a>
-              <a href="#professional" class="btn btn-circle page-scroll">
+              <a href="#about" class="btn btn-circle page-scroll">
                 <i class="fa fa-user animated"></i>
               </a>
               <a href="#contact" class="btn btn-circle page-scroll">
