Addditional index adjustments, syntanx tweaks and mobile support in js.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
         <div class="row">
           <div class="col-md-10 col-md-offset-1">
             <div class="intro-inner">
-              
               <p class="intro-text">Some intro test here that is neat and good.</p>
               <a href="#images" class="btn btn-circle page-scroll">
                 <i class="fa fa-camera animated"></i>
@@ -73,13 +72,14 @@
         </div>
       </div>
     </div>
+    <p class="very-light intro-photo-caption"><i class="fa fa-camera"></i>&nbsp;&nbsp;Some little text</p>
   </header>
   
   <section id="images" class="content-section dark-section text-center">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <h2>Photos</h2>
+          <h2>Images</h2>
           <ul class="nav nav-tabs" role="tablist">
             <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
             <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
@@ -115,7 +115,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <h2>Professional</h2>
+          <h2>Me + My Work</h2>
           <ul class="nav nav-tabs" role="tablist">
             <li role="presentation" class="active"><a href="#pro-1" aria-controls="pro-1" role="tab" data-toggle="tab">Home</a></li>
             <li role="presentation"><a href="#pro-2" aria-controls="pro-2" role="tab" data-toggle="tab">Profile</a></li>
@@ -146,14 +146,13 @@
       </div>
     </div>
   </section>
-
-  <footer>
-      <div class="container text-center">
-          <p>Copyright &copy; Your Website 2014</p>
-      </div>
+  <footer class="light-section">
+    <div class="container text-center">
+      <p class="light">Copyright &copy; Your Website 2014</p>
+    </div>
   </footer>
   
-  <div id="desktopTest" class="hidden-xs hidden-sm"></div>
+  <div id="mobileTest" class="hidden-xs hidden-sm"></div>
 
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
@@ -163,7 +162,7 @@
   <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
   <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
   <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
-  <script src="js/grayscale.js"></script>
+  <script src="js/grayscale.js?v=2"></script>
 
 
 </body>
