--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="author" content="">
   <title>ryan-jacobs.net</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/grayscale.css" rel="stylesheet">
-  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="css/main.css" rel="stylesheet">
+  <link href="libs/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
   <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -160,9 +160,9 @@
   <script src="https://www.amcharts.com/lib/3/ammap.js"></script>
   <script src="https://www.amcharts.com/lib/3/maps/js/usaLow.js"></script>
   <script src="https://www.amcharts.com/lib/3/themes/light.js"></script>
-  <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
-  <script type="text/javascript" src="fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
-  <script src="js/grayscale.js?v=2"></script>
+  <link rel="stylesheet" href="libs/fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
+  <script type="text/javascript" src="libs/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
+  <script src="js/main.js?v=2"></script>
 
 
 </body>
