--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="row">
           <div class="col-md-10 col-md-offset-1">
             <div class="intro-inner">
-              <p class="intro-text">Some intro test here that is neat and good.</p>
+              <p class="intro-text"></p>
               <a href="#images" class="btn btn-circle page-scroll">
                 <i class="fa fa-camera animated"></i>
               </a>
