Some less tweaks to general nav animations.

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             </div>
             <div role="tabpanel" class="tab-pane fade" id="messages">
               <p>Here is some content in tab 3.</p>
+              <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
             </div>
             <div role="tabpanel" class="tab-pane fade" id="settings">
               <p>Here is some content in tab 4.</p>
