--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/jquery.easing.min.js"></script>
+  <script src="drupal/sites/default/files/local_map_areas.js"></script>
   <script src="https://www.amcharts.com/lib/3/ammap.js"></script>
   <script src="https://www.amcharts.com/lib/3/maps/js/usaLow.js"></script>
   <script src="https://www.amcharts.com/lib/3/maps/js/worldLow.js"></script>
