Intro style cleanup and content prep.

--- a/index.html
+++ b/index.html
@@ -72,28 +72,38 @@
         </div>
       </div>
     </div>
-    <p class="very-light intro-photo-caption"><i class="fa fa-camera"></i>&nbsp;&nbsp;Some little text</p>
+    <p class="very-light intro-extra"><i class="fa fa-info-circle"></i>&nbsp;&nbsp;Aguas Calientes</p>
   </header>
-  
+
+  <section id="intro" class="content-section dark-section text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2">
+          <h1>Ryan Jacobs <small>This is where the opening description can go.</small></h1>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="images" class="content-section dark-section text-center">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1">
           <h2>Images</h2>
           <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Main</a></li>
-            <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Map</a></li>
+            <li role="presentation" class="active"><a href="#images-albums" aria-controls="images-main" role="tab" data-toggle="tab">Albums</a></li>
+            <li role="presentation"><a href="#images-map" aria-controls="images-map" role="tab" data-toggle="tab">Map</a></li>
           </ul>
           <!-- Tab panes -->
           <div class="tab-content">
-            <div role="tabpanel" class="tab-pane fade in active" id="home">
+            <div role="tabpanel" class="tab-pane fade in active" id="images-albums">
               <p>Here is some content in tab 1.</p>
               <p><a class="fancybox" data-fancybox-type="iframe" rel="group" href="gallery.html?conf=drupal/juicebox/xml/viewsstyle/galleries/page_1/Nature.xml">Nature</a></p>
               <p><a class="fancybox" data-fancybox-type="iframe" rel="group" href="gallery.html?conf=drupal/juicebox/xml/viewsstyle/galleries/page_1/Landscapes.xml">Landscapes</a></p>
               <p><a class="fancybox" data-fancybox-type="iframe" rel="group" href="gallery.html?conf=drupal/juicebox/xml/viewsstyle/galleries/page_1/Digital-Projects.xml">Digital Projects</a></p>
 
             </div>
-            <div role="tabpanel" class="tab-pane fade" id="profile">
+            <div role="tabpanel" class="tab-pane fade" id="images-map">
               <div id="chartdiv"></div>
             </div>
           </div>
@@ -104,27 +114,28 @@
       </div>
     </div>
   </section>
-  
+
   <section id="about" class="content-section light-section text-center">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1">
           <h2>Me + My Work</h2>
           <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="#pro-1" aria-controls="pro-1" role="tab" data-toggle="tab">Home</a></li>
-            <li role="presentation"><a href="#pro-2" aria-controls="pro-2" role="tab" data-toggle="tab">Profile</a></li>
+            <li role="presentation" class="active"><a href="#about-pro" aria-controls="about-pro" role="tab" data-toggle="tab">Professional</a></li>
+            <li role="presentation"><a href="#about-personal" aria-controls="about-personal" role="tab" data-toggle="tab">Personal</a></li>
           </ul>
           <!-- Tab panes -->
           <div class="tab-content">
-            <div role="tabpanel" class="tab-pane fade in active" id="pro-1">
+            <div role="tabpanel" class="tab-pane fade in active" id="about-pro">
               <p>Here is some content in tab 1.</p>
+              <a href="https://www.linkedin.com/in/ryanjacobs" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin-square larger"></i>&nbsp;&nbsp;LinkedIn Profile</a>&nbsp;&nbsp;
+              <a href="https://www.drupal.org/u/rjacobs" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-drupal larger"></i>&nbsp;&nbsp;Drupal Profile</a>
             </div>
-            <div role="tabpanel" class="tab-pane fade" id="pro-2">
+            <div role="tabpanel" class="tab-pane fade" id="about-personal">
               <p>Here is some content in tab 2.</p>
             </div>
           </div>
           <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
         </div>
       </div>
     </div>
@@ -145,7 +156,7 @@
       <p class="light">Copyright &copy; Your Website 2014</p>
     </div>
   </footer>
-  
+
   <div id="mobileTest" class="hidden-xs hidden-sm"></div>
 
   <script src="js/jquery.js"></script>
