--- a/index.html
+++ b/index.html
@@ -57,16 +57,11 @@
         <div class="row">
           <div class="col-md-10 col-md-offset-1">
             <div class="intro-inner">
-              <p class="intro-text"></p>
-              <a href="#images" class="btn btn-circle page-scroll">
-                <i class="fa fa-camera animated"></i>
-              </a>
-              <a href="#about" class="btn btn-circle page-scroll">
-                <i class="fa fa-user animated"></i>
-              </a>
-              <a href="#contact" class="btn btn-circle page-scroll">
-                <i class="fa fa-envelope animated"></i>
-              </a>
+              <div class="intro-text">
+                <h2><a href="#about" class="page-scroll">Web architect<i class="fa fa-arrow-circle-o-down"></i></a></h2>
+                <h2><a href="#images" class="page-scroll">Camera user<i class="fa fa-arrow-circle-o-down"></i></a></h2>
+              </div>
+
             </div>
           </div>
         </div>
