--- a/about/index.html
+++ b/about/index.html
@@ -1,23 +1,17 @@
 ---
-redirect_from: "/foo/*"
+redirect_from:
+  - /foom
+  - /foom/
 ---
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Gallery</title>
+		<title>About</title>
 		<meta charset="utf-8" />
-		<meta id="jb-viewport" name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1, maximum-scale=1, user-scalable=0"/>
-		<style type="text/css">
-			body {
-				margin: 0px;
-        background-color: #555;
-			}
-		</style>
+		<meta http-equiv="refresh" content="0;url='../#about'" />
+    <link rel="canonical" href="http://www.ryan-jacobs/#about">
 	</head>
 	<body>
-		<div id="juicebox-container"></div>
-    <script src="js/jquery.js"></script>
-    <script type="text/javascript" src="libs/juicebox/juicebox.js"></script>
-    <script type="text/javascript" src="js/juicebox_load.js"></script>
+    <p>Redirecting...</p>
 	</body>
 </html>
