Playing with github redirects.

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,6 @@
 ---
 redirect_from:
-  - /foom
-  - /foom/
+  - /personal-info
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -12,6 +11,6 @@ redirect_from:
     <link rel="canonical" href="http://www.ryan-jacobs/#about">
 	</head>
 	<body>
-    <p>Redirecting...</p>
+    <p></p>
 	</body>
 </html>
