--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
     <div class="intro-body">
       <div class="container">
         <div class="row">
-          <div class="col-md-10 col-md-offset-1">
+          <div class="col-md-6 col-md-offset-3">
             <div class="intro-inner">
               <div class="intro-text">
+                <h3>Ryan Jacobs</h3>
                 <h2><a href="#about" class="page-scroll">Web architect<i class="fa fa-arrow-circle-o-down"></i></a></h2>
                 <h2><a href="#images" class="page-scroll">Camera user<i class="fa fa-arrow-circle-o-down"></i></a></h2>
               </div>
@@ -117,7 +118,7 @@
               <div id="chartdiv"></div>
             </div>
           </div>
-          <p></p>
+          <a href="https://vimeo.com/user37694569" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-vimeo-square larger"></i>Videos on Vimeo</a>
         </div>
       </div>
     </div>
