--- a/index.html
+++ b/index.html
@@ -179,6 +179,14 @@
   <script type="text/javascript" src="libs/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
   <script src="js/main.js?v=2"></script>
 
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-3135689-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 
 </body>
 </html>
