--- a/redirects/photos.html
+++ b/redirects/photos.html
@@ -1,5 +1,7 @@
 ---
 redirect_from:
+  - /photos
+  - /photos/
   - /photos/albums/Nature
   - /photos/albums/Structures
   - /photos/albums/Digital-Projects
