Add pro section content.

--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
     </div>
   </section>
 
-  <section id="about" class="content-section light-section text-center">
+  <section id="about" class="content-section light-section">
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1">
-          <h2>Me + My Work</h2>
+          <h2 class="text-center">Me + My Work</h2>
           <ul class="nav nav-tabs" role="tablist">
             <li role="presentation" class="active"><a href="#about-pro" aria-controls="about-pro" role="tab" data-toggle="tab">Professional</a></li>
             <li role="presentation"><a href="#about-personal" aria-controls="about-personal" role="tab" data-toggle="tab">Personal</a></li>
@@ -136,12 +136,19 @@
           <!-- Tab panes -->
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active" id="about-pro">
-              <p>Here is some content in tab 1.</p>
-              <a href="https://www.linkedin.com/in/ryanjacobs" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin-square larger"></i>LinkedIn Profile</a>
-              <a href="https://www.drupal.org/u/rjacobs" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-drupal larger"></i>Drupal Profile</a>
+              <p>I’m a <strong>web architect</strong>. I play the roles of software engineer, systems integration specialist, communications strategist and project manager… occasionally simultaneously. Though my focus is mostly technical I’ve found that illusive balance between hard and soft skills that's needed to deliver complex solutions while managing non-technical stakeholders.</p> 
+              <img class="pull-right" src="img/thought_simple.png" />
+              <p>I have over a decade of web systems experience working with medium-large nonprofit and education institutions while specializing in Open Source frameworks, such as Drupal, and multi-platform integrations.</p>
+              <p>My passion is to find the tools that make it easy for organizations to obtain and manage custom web solutions, at a low cost, while collaborating with someone who knows the unique realities of their environment.</p>
+              <p class="text-center">
+                <a href="https://www.linkedin.com/in/ryanjacobs" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin-square larger"></i>LinkedIn Profile</a>
+                <a href="https://www.drupal.org/u/rjacobs" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-drupal larger"></i>Drupal Profile</a>
+              </p>
             </div>
             <div role="tabpanel" class="tab-pane fade" id="about-personal">
-              <p>Here is some content in tab 2.</p>
+              <img class="pull-right" src="img/ryan.jpg" />
+              <p>In November 1978 I began the elaborate process of growing up in a pleasant Chicago suburb. Approximately 19 years later, I called the University of Illinois home, and spent about 5 years swaggering among the doors of higher education while polishing a set of engineering credentials. One bachelors degree later, and several work and travel stints in the continental US and beyond, I found myself strangely drawn to the southern hemisphere and the rather abstract concept of “development”. Clearly one thing led to another and I began working, traveling and taking long introspective walks within the vague confines of Southern Africa and Southern South America. One might conclude that the juxtaposition of wildly communal living, some of the most stunning sites on earth, and small insights into the surprisingly beautiful, profoundly diverse, and strangely confusing world of civil society, changed me forever.</p>
+              <p>Though it's a constant journey to "put the pieces together", I now find myself inside the broad sphere of Information and Communication Technology for Development, and let my <a href="#about-pro" aria-controls="about-pro" role="tab" data-toggle="tab">work details</a> speak a bit more about that.
             </div>
           </div>
         </div>
@@ -153,8 +160,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1">
-          <h2>Contact</h2>
-          <p>Some contact details to go here.</p>
+          <h2>Get in touch</h2>
+          <p><a href="mailto:hello@ryan-jacobs.net" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-envelope larger"></i>hello@ryan-jacobs.net</a></p>
         </div>
       </div>
     </div>
