--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-          <h1>Ryan Jacobs <small>This is where the opening description can go.</small></h1>
+          <h1><small>Your clicks are welcome here</small></h1>
         </div>
       </div>
     </div>
@@ -118,6 +118,7 @@
               <div id="chartdiv"></div>
             </div>
           </div>
+          <p>I felt compelled to turn a growing archive of my images into something interesting. The albums and maps above aggregate some of my favorites. Some derivative timelapse content is also available via Vimeo below.</p>
           <a href="https://vimeo.com/user37694569" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-vimeo-square larger"></i>Videos on Vimeo</a>
         </div>
       </div>
