Add some footer text.

--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
   </section>
   <footer class="light-section">
     <div class="container text-center">
-      <p class="light">Copyright &copy; Your Website 2014</p>
+      <p class="light">All image content is licensed under a <a target="_blank" rel="license" href="http://creativecommons.org/licenses/by-nc-sa/2.0/">Creative Commons Attribution-NonCommercial-ShareAlike 2.0 Generic License</a>. </p>
+      <p class="light">Site front-end derived from the <a target="_blank" href="https://startbootstrap.com/template-overviews/grayscale/">Grayscale bootstrap template</a>. Galleries powered by the <a target="_blank" href="https://www.drupal.org/project/juicebox">Drupal Juicebox integration extention</a>.</p>
     </div>
   </footer>
 
