--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-3135689-1', 'auto');
-    ga('send', 'pageview');
+    ga('create', 'UA-3135689-1', {'allowAnchor': true});
+    ga('send', { 'page': location.pathname + location.search + location.hash});
   </script>
 
 </body>
