--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1">
           <h2>Get in touch</h2>
+          <p><a href="/">Test link</a></p>
           <p><a href="mailto:hello@ryan-jacobs.net" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-envelope larger"></i>hello@ryan-jacobs.net</a></p>
         </div>
       </div>
@@ -175,7 +176,14 @@
   </footer>
 
   <div id="mobileTest" class="hidden-xs hidden-sm"></div>
-
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-3135689-1', 'auto', {'allowAnchor': true});
+    ga('send', 'pageview', {'page': location.pathname + location.search + location.hash});
+  </script>
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/jquery.easing.min.js"></script>
@@ -187,15 +195,6 @@
   <link rel="stylesheet" href="libs/fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
   <script type="text/javascript" src="libs/fancybox/source/jquery.fancybox.pack.js?v=2.1.5"></script>
   <script src="js/main.js?v=2"></script>
-
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-3135689-1', 'auto', {'allowAnchor': true});
-    ga('send', 'pageview', {'page': location.pathname + location.search + location.hash});
-  </script>
 
 </body>
 </html>
