Add many more redirects.

--- a/redirects/about.html
+++ b/redirects/about.html
@@ -2,7 +2,21 @@
 redirect_from:
   - /about
   - /about/
-  - /personal-info
+  - /projects/28
+  - /projects/roles/fun
+  - /projects/concepts/drupal
+  - /projects/roles/trainer
+  - /projects/roles/information-architect
+  - /projects/roles/project-manager
+  - /projects/concepts/sso
+  - /projects/concepts/simpleviewer
+  - /projects/concepts/jamit
+  - /projects/concepts/salesforce
+  - /projects/concepts/wordpress
+  - /projects/concepts/responsivemobile
+  - /projects/concepts/juicebox
+  - /projects/concepts/lamp-stack
+  - /projects/concepts/open-atrium
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -10,7 +24,7 @@ redirect_from:
 		<title>About</title>
 		<meta charset="utf-8" />
 		<meta http-equiv="refresh" content="0;url='../#about'" />
-    <link rel="canonical" href="http://www.ryan-jacobs/#about">
+    <link rel="canonical" href="http://ryan-jacobs/#about">
 	</head>
 	<body>
     <p></p>
