--- a/redirects/images.html
+++ b/redirects/images.html
@@ -5,14 +5,18 @@ redirect_from:
   - /photos/albums/Nature
   - /photos/albums/Structures
   - /photos/albums/Digital-Projects
+  - /all-project-tags
+  - /photos/tags/people
+  - /photos/tags/water
+  - /photos/tags/long-exposure
 ---
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Photos</title>
+		<title>Images</title>
 		<meta charset="utf-8" />
 		<meta http-equiv="refresh" content="0;url='../#images'" />
-    <link rel="canonical" href="http://www.ryan-jacobs/#images">
+    <link rel="canonical" href="http://ryan-jacobs/#images">
 	</head>
 	<body>
     <p></p>
