Small content edits.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>ryan-jacobs.net</title>
+  <title>Ryan Jacobs: Web architect</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
   <link href="libs/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -61,7 +61,7 @@
               <div class="intro-text">
                 <h3>Ryan Jacobs</h3>
                 <h2><a href="#about" class="page-scroll">Web architect<i class="fa fa-arrow-circle-o-down"></i></a></h2>
-                <h2><a href="#images" class="page-scroll">Camera user<i class="fa fa-arrow-circle-o-down"></i></a></h2>
+                <h2><a href="#images" class="page-scroll">Lensman<i class="fa fa-arrow-circle-o-down"></i></a></h2>
               </div>
 
             </div>
@@ -118,7 +118,7 @@
               <div id="chartdiv"></div>
             </div>
           </div>
-          <p>I felt compelled to turn a growing archive of my images into something interesting. The albums and maps above aggregate some of my favorites. Some derivative timelapse content is also available via Vimeo below.</p>
+          <p>I felt compelled to turn a growing archive of my images into something interesting. The albums and <a href="#images-map">maps</a> above aggregate some of my favorites. Some derivative timelapse content is also available via Vimeo below.</p>
           <a href="https://vimeo.com/user37694569" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-vimeo-square larger"></i>Videos on Vimeo</a>
         </div>
       </div>
@@ -137,7 +137,7 @@
           <!-- Tab panes -->
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active" id="about-pro">
-              <p>I’m a <strong>web architect</strong>. I play the roles of software engineer, systems integration specialist, communications strategist and project manager… occasionally simultaneously. Though my focus is mostly technical I’ve found that illusive balance between hard and soft skills that's needed to deliver complex solutions while managing non-technical stakeholders.</p> 
+              <p>I’m a web architect. I play the roles of software engineer, systems integration specialist, communications strategist and project manager… occasionally simultaneously. Though my focus is mostly technical I’ve found that illusive balance between hard and soft skills that's needed to deliver complex solutions while managing non-technical stakeholders.</p> 
               <img class="pull-right" src="img/thought_simple.png" />
               <p>I have over a decade of web systems experience working with medium-large nonprofit and education institutions while specializing in Open Source frameworks, such as Drupal, and multi-platform integrations.</p>
               <p>My passion is to find the tools that make it easy for organizations to obtain and manage custom web solutions, at a low cost, while collaborating with someone who knows the unique realities of their environment.</p>
