Update professional summary.

--- a/index.html
+++ b/index.html
@@ -137,10 +137,9 @@
           <!-- Tab panes -->
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active" id="about-pro">
-              <p>I’m a web architect. I play the roles of software engineer, systems integration specialist, communications strategist and project manager… occasionally simultaneously. Though my focus is mostly technical I’ve found that illusive balance between hard and soft skills that's needed to deliver complex solutions while managing non-technical stakeholders.</p> 
-              <img class="pull-right" src="img/thought_simple.png" />
-              <p>I have over a decade of web systems experience working with medium-large nonprofit and education institutions while specializing in Open Source frameworks, such as Drupal, and multi-platform integrations.</p>
-              <p>My passion is to find the tools that make it easy for organizations to obtain and manage custom web solutions, at a low cost, while collaborating with someone who knows the unique realities of their environment.</p>
+              <p>I am a web systems architect with over 20 years’ experience designing, implementing and maintaining complex web platforms and data integrations within the nonprofit and education sectors. I thrive working with initiatives, teams and institutions that encourage more equitable access to information, education and democratic systems.</p> 
+              <p> I specialize in open-source frameworks and communities like Drupal, LAMP-based WebOps solutions and agile development practices that make web projects sustainable and impactful. My recent work includes web solutions for business/marketing portals, data analysis and public databases with millions of records and hundreds of terabytes of data.<p>
+              <p>In addition to deep engineering expertise, I have experience in both technical project management and organizational leadership, making me uniquely positioned to interpret business needs and support a mission-focused technical strategy.</p>
               <p class="text-center">
                 <a href="https://www.linkedin.com/in/ryanjacobs" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin-square larger"></i>LinkedIn Profile</a>
                 <a href="https://www.drupal.org/u/rjacobs" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-drupal larger"></i>Drupal Profile</a>
