Formatting adjustments to professional summary.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <div class="tab-content">
             <div role="tabpanel" class="tab-pane fade in active" id="about-pro">
               <p>I am a web systems architect with over 20 years’ experience designing, implementing and maintaining complex web platforms and data integrations within the nonprofit and education sectors. I thrive working with initiatives, teams and institutions that encourage more equitable access to information, education and democratic systems.</p> 
-              <p> I specialize in open-source frameworks and communities like Drupal, LAMP-based WebOps solutions and agile development practices that make web projects sustainable and impactful. My recent work includes web solutions for business/marketing portals, data analysis and public databases with millions of records and hundreds of terabytes of data.<p>
+              <p>I specialize in open-source frameworks and communities like Drupal, LAMP-based WebOps solutions and agile development practices that make web projects sustainable and impactful. My recent work includes web solutions for business/marketing portals, data analysis and public databases with millions of records and hundreds of terabytes of data.</p>
               <p>In addition to deep engineering expertise, I have experience in both technical project management and organizational leadership, making me uniquely positioned to interpret business needs and support a mission-focused technical strategy.</p>
               <p class="text-center">
                 <a href="https://www.linkedin.com/in/ryanjacobs" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin-square larger"></i>LinkedIn Profile</a>
